[project]
name = "practicum-in-cs"
version = "0.1.0"
description = ""
authors = [
    {name = "Wuizlz",email = "brisenodan12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.53.0,<2.0.0)",
    "watchdog (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
